fix(profile): spacing

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -17,6 +17,6 @@
   }
 
   &.-bg {
-    background: $color-purple url("/bg.png") no-repeat center 40%;
+    background: $color-purple url("/bg.png") no-repeat center 35%;
   }
 }
