--- a/styles/pages/_profile.scss
+++ b/styles/pages/_profile.scss
@@ -1,5 +1,7 @@
 .page-container.profile-page {
   > .hero-container {
+    padding-bottom: 2rem;
+
     justify-content: center;
 
     > .userimage {
@@ -9,8 +11,12 @@
     }
 
     > .typography.-title {
-      margin-top: 1.5rem;
+      margin-top: 1rem;
     }
+  }
+
+  > .box {
+    margin-top: -3rem;
   }
 
   .-card,
@@ -26,8 +32,6 @@
     border-radius: $border-radius;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-
-    margin-top: -3rem;
 
     fieldset:not(:first-of-type) {
       margin-top: 2.5rem;
